# shorelane

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  config.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml  tag-on-version.yml
bi/: dashboard_data.py
bi/looker_studio/: README.md
bi/plotly/: business_dashboard.py  business_dashboard_static.py  figures.py  revenue_dashboard.py
context/ground_truth/: business_dashboard.md  revenue_q1_2024.md
context/guides/: personas.md
context/metrics/: revenue.yml
context/semantic/: shorelane.view.lkml
context/website/: README.md  index.html
dbt/: dbt_project.yml  profiles.example.yml
dbt/macros/: money.sql
dbt/models/marts/: _exposures.yml  _marts.yml  fct_revenue.sql
dbt/models/staging/: _sources.yml  _staging.yml  stg_invoices.sql  stg_orders.sql  stg_refunds.sql  stg_revenue_recognition.sql
dbt/profiles.parse/: profiles.yml
demo/: render_transcript.py
evals/: questions.yaml
evals/rubrics/: revenue.yml
generators/: common.py  emit.py  measures.py  orders.py
loaders/: bigquery_load.py  redshift_load.py  snowflake_load.py  visibility.py
raw_schema/: revenue_slice.md
site/: explore.html
tests/: check_ground_truth.py
